Creation de la connexion utilisateur [closes #3]
